tests/ui/snapshots/syntax_ai_body_not_only_prompt.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/syntax_ai_body_not_only_prompt.wardscript
---
exit: Some(1)
--- human ---
[W0016] Error: expected a prompt string in `ai fn`, found `let`
   ╭─[ tests/ui/syntax_ai_body_not_only_prompt.wardscript:2:5 ]
   │
 2 │     let short = text;
   │     ─┬─  
   │      ╰─── the body of an `ai fn` is a prompt string
   │ 
   │ Help: write the prompt as a string literal, using `{...}` to insert parameters: `{ "Summarize: {text}" }`
───╯
error: could not check `tests/ui/syntax_ai_body_not_only_prompt.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0016",
      "file": "tests/ui/syntax_ai_body_not_only_prompt.wardscript",
      "help": "write the prompt as a string literal, using `{...}` to insert parameters: `{ \"Summarize: {text}\" }`",
      "labels": [
        {
          "message": "the body of an `ai fn` is a prompt string",
          "primary": true,
          "span": {
            "end": {
              "column": 8,
              "line": 2,
              "offset": 49
            },
            "start": {
              "column": 5,
              "line": 2,
              "offset": 46
            }
          }
        }
      ],
      "message": "expected a prompt string in `ai fn`, found `let`",
      "severity": "error",
      "span": {
        "end": {
          "column": 8,
          "line": 2,
          "offset": 49
        },
        "start": {
          "column": 5,
          "line": 2,
          "offset": 46
        }
      }
    }
  ],
  "file": "tests/ui/syntax_ai_body_not_only_prompt.wardscript"
}
