tests/ui/snapshots/syntax_ai_missing_return_type.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/syntax_ai_missing_return_type.wardscript
---
exit: Some(1)
--- human ---
[W0017] Error: `ai fn summarize` has no return type
   ╭─[ tests/ui/syntax_ai_missing_return_type.wardscript:1:7 ]
   │
 1 │ ai fn summarize(text: String) {
   │       ────┬────  
   │           ╰────── add a return type here
   │ 
   │ Help: the model's answer is parsed and validated against the return type, e.g. `-> Ticket`
───╯
error: could not check `tests/ui/syntax_ai_missing_return_type.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0017",
      "file": "tests/ui/syntax_ai_missing_return_type.wardscript",
      "help": "the model's answer is parsed and validated against the return type, e.g. `-> Ticket`",
      "labels": [
        {
          "message": "add a return type here",
          "primary": true,
          "span": {
            "end": {
              "column": 16,
              "line": 1,
              "offset": 15
            },
            "start": {
              "column": 7,
              "line": 1,
              "offset": 6
            }
          }
        }
      ],
      "message": "`ai fn summarize` has no return type",
      "severity": "error",
      "span": {
        "end": {
          "column": 16,
          "line": 1,
          "offset": 15
        },
        "start": {
          "column": 7,
          "line": 1,
          "offset": 6
        }
      }
    }
  ],
  "file": "tests/ui/syntax_ai_missing_return_type.wardscript"
}
