tests/ui/snapshots/syntax_ai_prompt_not_string.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/syntax_ai_prompt_not_string.ward
---
exit: Some(1)
--- human ---
[W0016] Error: expected a prompt string in `ai fn`, found `text`
   ╭─[ tests/ui/syntax_ai_prompt_not_string.ward:2:5 ]
   │
 2 │     text
   │     ──┬─  
   │       ╰─── the body of an `ai fn` is a prompt string
   │ 
   │ Help: write the prompt as a string literal, using `{...}` to insert parameters: `{ "Summarize: {text}" }`
───╯
error: could not check `tests/ui/syntax_ai_prompt_not_string.ward` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0016",
      "file": "tests/ui/syntax_ai_prompt_not_string.ward",
      "help": "write the prompt as a string literal, using `{...}` to insert parameters: `{ \"Summarize: {text}\" }`",
      "labels": [
        {
          "message": "the body of an `ai fn` is a prompt string",
          "primary": true,
          "span": {
            "end": {
              "column": 9,
              "line": 2,
              "offset": 50
            },
            "start": {
              "column": 5,
              "line": 2,
              "offset": 46
            }
          }
        }
      ],
      "message": "expected a prompt string in `ai fn`, found `text`",
      "severity": "error",
      "span": {
        "end": {
          "column": 9,
          "line": 2,
          "offset": 50
        },
        "start": {
          "column": 5,
          "line": 2,
          "offset": 46
        }
      }
    }
  ],
  "file": "tests/ui/syntax_ai_prompt_not_string.ward"
}
