tests/ui/snapshots/syntax_ai_without_fn.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/syntax_ai_without_fn.wardscript
---
exit: Some(1)
--- human ---
[W0010] Error: expected `fn` after `ai`, found `summarize`
   ╭─[ tests/ui/syntax_ai_without_fn.wardscript:1:8 ]
   │
 1 │ pub ai summarize(text: String) -> String {
   │        ────┬────  
   │            ╰────── expected `fn` after `ai`
───╯
error: could not check `tests/ui/syntax_ai_without_fn.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0010",
      "file": "tests/ui/syntax_ai_without_fn.wardscript",
      "help": null,
      "labels": [
        {
          "message": "expected `fn` after `ai`",
          "primary": true,
          "span": {
            "end": {
              "column": 17,
              "line": 1,
              "offset": 16
            },
            "start": {
              "column": 8,
              "line": 1,
              "offset": 7
            }
          }
        }
      ],
      "message": "expected `fn` after `ai`, found `summarize`",
      "severity": "error",
      "span": {
        "end": {
          "column": 17,
          "line": 1,
          "offset": 16
        },
        "start": {
          "column": 8,
          "line": 1,
          "offset": 7
        }
      }
    }
  ],
  "file": "tests/ui/syntax_ai_without_fn.wardscript"
}
