tests/ui/snapshots/syntax_annotation_on_type.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/syntax_annotation_on_type.ward
---
exit: Some(1)
--- human ---
[W0024] Error: annotations aren't allowed on types
   ╭─[ tests/ui/syntax_annotation_on_type.ward:1:1 ]
   │
 1 │ @derive(Debug)
   │ ───────┬──────  
   │        ╰──────── remove this annotation
   │ 
   │ Help: only functions and imports take annotations
───╯
error: could not check `tests/ui/syntax_annotation_on_type.ward` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0024",
      "file": "tests/ui/syntax_annotation_on_type.ward",
      "help": "only functions and imports take annotations",
      "labels": [
        {
          "message": "remove this annotation",
          "primary": true,
          "span": {
            "end": {
              "column": 15,
              "line": 1,
              "offset": 14
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0
            }
          }
        }
      ],
      "message": "annotations aren't allowed on types",
      "severity": "error",
      "span": {
        "end": {
          "column": 15,
          "line": 1,
          "offset": 14
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0
        }
      }
    }
  ],
  "file": "tests/ui/syntax_annotation_on_type.ward"
}
