tests/ui/snapshots/syntax_attribute_on_type.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/syntax_attribute_on_type.ward
---
exit: Some(1)
--- human ---
[W0024] Error: attributes aren't allowed on types
   ╭─[ tests/ui/syntax_attribute_on_type.ward:1:1 ]
   │
 1 │ #[derive(Debug)]
   │ ────────┬───────  
   │         ╰───────── remove this attribute
   │ 
   │ Help: only functions and imports take attributes
───╯
error: could not check `tests/ui/syntax_attribute_on_type.ward` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0024",
      "file": "tests/ui/syntax_attribute_on_type.ward",
      "help": "only functions and imports take attributes",
      "labels": [
        {
          "message": "remove this attribute",
          "primary": true,
          "span": {
            "end": {
              "column": 17,
              "line": 1,
              "offset": 16
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0
            }
          }
        }
      ],
      "message": "attributes aren't allowed on types",
      "severity": "error",
      "span": {
        "end": {
          "column": 17,
          "line": 1,
          "offset": 16
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0
        }
      }
    }
  ],
  "file": "tests/ui/syntax_attribute_on_type.ward"
}
