tests/ui/snapshots/syntax_bad_interpolation_expr.snap
---
source: crates/ws_cli/tests/ui.rs
description: tests/ui/syntax_bad_interpolation_expr.wardscript
---
exit: Some(1)
--- human ---
[W0012] Error: expected an expression, found end of interpolation
   ╭─[ tests/ui/syntax_bad_interpolation_expr.wardscript:2:15 ]
   │
 2 │     "sum: {a +}"
   │               ┬  
   │               ╰── expected an expression
───╯
error: could not check `tests/ui/syntax_bad_interpolation_expr.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0012",
      "file": "tests/ui/syntax_bad_interpolation_expr.wardscript",
      "help": null,
      "labels": [
        {
          "message": "expected an expression",
          "primary": true,
          "span": {
            "end": {
              "column": 16,
              "line": 2,
              "offset": 40
            },
            "start": {
              "column": 15,
              "line": 2,
              "offset": 39
            }
          }
        }
      ],
      "message": "expected an expression, found end of interpolation",
      "severity": "error",
      "span": {
        "end": {
          "column": 16,
          "line": 2,
          "offset": 40
        },
        "start": {
          "column": 15,
          "line": 2,
          "offset": 39
        }
      }
    }
  ],
  "file": "tests/ui/syntax_bad_interpolation_expr.wardscript"
}
